# conda-toml-spec

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
conda_toml_spec/: _version.py  plugin.py  spec.py
tests/: conftest.py  test_spec.py
tests/assets/: multi_environment.toml  multi_environment2.toml  single_environment.toml
